--- a/tox.ini
+++ b/tox.ini
@@ -1,16 +1,19 @@
 [tox]
-envlist = py27-{sqlite,postgresql,mysql}
+envlist = py37-sqlite, stats
 
 [testenv]
-commands = {envpython} setup.py test
+basepython=python3.7
+commands = coverage run  setup.py test
 deps =
-    postgresql: psycopg2 >= 2.0
-    mysql: MySQL-python
+    sqlite: sqlitebck
+    coverage
 setenv =
     sqlite: TRYTOND_DATABASE_URI={env:SQLITE_URI:sqlite://}
-    postgresql: TRYTOND_DATABASE_URI={env:POSTGRESQL_URI:postgresql://}
-    mysql: TRYTOND_DATABASE_URI={env:MYSQL_URI:mysql://}
     sqlite: DB_NAME={env:SQLITE_NAME::memory:}
-    postgresql: DB_NAME={env:POSTGRESQL_NAME:test}
-    mysql: DB_NAME={env:MYSQL_NAME:test}
-install_command = pip install --pre --find-links https://http://ftp.nan.cat/tryton-packages.html {opts} {packages}
+install_command = pip install --pre --find-links https://trydevpi.tryton.org/ {opts} {packages}
+
+[testenv:stats]
+basepython=python3.7
+commands =
+    coverage report --omit=.tox/* 
+    coverage xml
